# motor-sim-demo

./: .clang-format  .clang-tidy  .codechecker.skip  .codechecker.tidyargs  .gitignore  CMakeLists.txt  Doxyfile  README.md  prj.conf  west.yml
.github/workflows/: ci.yml  clang-format.yml  pages.yml  release.yml  sca.yml
docs/: coverage.md  doxygen-extra.css  doxygen.md  mainpage.md  quickstart.md  serial_shell.md  testing.md
src/: app_state.c  app_state.h  console_shell.c  fault_monitor.c  fault_monitor.h  main.c  motor_control.c  motor_control.h  telemetry.c  telemetry.h
tests/integration/system/: CMakeLists.txt  testcase.yaml
tests/integration/system/src/: test_system.c
tests/unit/app_state/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/app_state/src/: test_app_state.c
tests/unit/console_shell/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/console_shell/src/: test_console_shell.c
tests/unit/fault_monitor/: CMakeLists.txt  testcase.yaml
tests/unit/fault_monitor/src/: test_fault_monitor.c
tests/unit/motor_control/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/motor_control/src/: test_motor_control.c
tests/unit/telemetry/: CMakeLists.txt  testcase.yaml
tests/unit/telemetry/src/: test_telemetry.c
